--- a/frontend/src/app/components/clients/client-profile/client-profile.component.html
+++ b/frontend/src/app/components/clients/client-profile/client-profile.component.html
@@ -10,7 +10,10 @@
       alt=""
     />
     } @else {
-    <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="" />
+    <img
+      src="https://png.pngtree.com/png-vector/20190702/ourlarge/pngtree-female-user-avatars-flat-style-women-profession-vector-png-image_1529171.jpg"
+      alt=""
+    />
     }
   </a>
   <div
