--- a/frontend/src/app/components/event-calendar/event-calendar.component.html
+++ b/frontend/src/app/components/event-calendar/event-calendar.component.html
@@ -12,7 +12,7 @@
         <h5 class="modal-title" id="formLabel">Add Event</h5>
         <button
           type="button"
-          class="btn-close"
+          class="btn-close btn btn-danger"
           data-bs-dismiss="modal"
           aria-label="Close"
         ></button>
@@ -76,7 +76,13 @@
           >
             <!-- Error message will appear here -->
           </div>
-          <button type="submit" class="btn btn-primary">Add Event</button>
+          <button
+            type="submit"
+            class="btn btn-primary"
+            style="background-color: var(--mainColor)"
+          >
+            Add Event
+          </button>
         </form>
       </div>
     </div>
