--- a/frontend/src/app/shared/secondary-nav/secondary-nav.component.css
+++ b/frontend/src/app/shared/secondary-nav/secondary-nav.component.css
@@ -24,6 +24,14 @@ button {
   border: none;
   color: white;
 }
+button:hover {
+  background: rgb(70, 117, 118);
+  background: linear-gradient(
+    151deg,
+    rgba(70, 117, 118, 1) 1%,
+    rgba(98, 96, 96, 1) 17%
+  );
+}
 
 .search {
   position: relative;
