--- a/frontend/src/app/shared/single-page-details/single-page-details.component.css
+++ b/frontend/src/app/shared/single-page-details/single-page-details.component.css
@@ -16,7 +16,7 @@ body {
 }
 
 .profile-nav .user-heading {
-  background: #415094;
+  background: var(--mainColor);
   color: #fff;
   border-radius: 4px 4px 0 0;
   -webkit-border-radius: 4px 4px 0 0;
