--- a/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/dashboard/dashboard.component.css
@@ -10,9 +10,12 @@
 
 .DashBoardCardHover:hover {
   background-color: rgba(255, 255, 255, 0.2);
-
 }
 
 .HCard:hover {
   color: #000000 !important;
+}
+
+h6 {
+  color: var(--secondaryColor) !important;
 }
