--- a/frontend/src/app/shared/single-page-details/single-page-details.component.html
+++ b/frontend/src/app/shared/single-page-details/single-page-details.component.html
@@ -1,5 +1,5 @@
 <div class="container bootstrap snippets bootdey">
-  <h1>{{ title.toUpperCase() }}</h1>
+  <h1 style="color: var(--mainColor)">{{ title.toUpperCase() }}</h1>
   <div class="row">
     <div class="profile-nav col-md-3">
       <div class="panel">
