Moving Registeration form to Authorized users only

--- a/frontend/src/app/components/Finance/table/table.component.html
+++ b/frontend/src/app/components/Finance/table/table.component.html
@@ -1,11 +1,11 @@
 <div class="table-section">
-  <table class="w-full">
-    <thead>
-      <th class="w-1/5">Name</th>
-      <th class="w-1/5">Amount</th>
-      <th class="w-1/5">Date</th>
-      <th class="w-1/5">Budget</th>
-      <th class="w-1/5"></th>
+  <table class="w-full border border-3">
+    <thead class="border border-3">
+      <th class="w-1/5 text-black text-center fs-4">Name</th>
+      <th class="w-1/5 text-black text-center fs-4">Amount</th>
+      <th class="w-1/5 text-black text-center fs-4">Date</th>
+      <th class="w-1/5 text-black text-center fs-4">Budget</th>
+      <th class="w-1/5 text-black text-center fs-4">Action</th>
     </thead>
 
     <tbody class="w-full">
