--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -153,6 +153,13 @@
       </app-dropdown>
       }
 
+      <li (click)="registerNewUser()" class="nav-list">
+        <button class="nav-link">
+          <i class="fa-solid fa-user-plus"></i>
+          Register New User
+        </button>
+      </li>
+
       <li (click)="logOut()" class="nav-list">
         <button class="nav-link">
           <i class="fa-solid fa-sign-out"></i>
