fixing updating forms without refreshes

--- a/frontend/src/app/shared/adding-form/input-row/input-row.component.html
+++ b/frontend/src/app/shared/adding-form/input-row/input-row.component.html
@@ -15,7 +15,7 @@
         'placeholder-option': !form.get(input_Info.backed_key)?.value
       }"
     >
-      <option value="">Please Select {{ input_Info.title }}</option>
+      <option value="" hidden>Please Select {{ input_Info.title }}</option>
       <option *ngFor="let option of input_Info.options" [value]="option.id">
         {{ option.value }}
       </option>
