fix add session form with validations

--- a/frontend/src/app/components/cases/case-details/case-details.component.html
+++ b/frontend/src/app/components/cases/case-details/case-details.component.html
@@ -12,6 +12,7 @@
     [formInputRows]="newSessionInputRows"
     [onFormSubmit]="submitForm"
     (backdropClicked)="toggleFormVisibility()"
+    [form]="form"
   ></app-adding-form>
 
   <app-table
