--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -175,7 +175,13 @@
   <button
     class="btn btn-primary toggle-sidebar d-md-none"
     (click)="toggleSidebar()"
-    style="position: fixed; top: 10px; left: 10px; z-index: 1001"
+    style="
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 1001;
+      background-color: var(--mainColor);
+    "
   >
     <i class="fa fa-bars"></i>
   </button>
