removing un-wanted logs && fixing Tasks UI Colors

--- a/frontend/src/app/components/todo-list/tasks/new-task-form/new-task-form.component.css
+++ b/frontend/src/app/components/todo-list/tasks/new-task-form/new-task-form.component.css
@@ -13,7 +13,7 @@ dialog {
   width: 90%;
   z-index: 1003;
   max-width: 30rem;
-  background-color: #3f72af;
+  background-color: #467576;
   border-radius: 6px;
   border: none;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.4);
