--- a/frontend/src/app/components/todo-list/tasks/tasks.component.html
+++ b/frontend/src/app/components/todo-list/tasks/tasks.component.html
@@ -4,7 +4,7 @@
 
 <div id="tasks">
   <header>
-    <h2>{{ selectedUser.name }}</h2>
+    <h2 class="fs-2">{{ selectedUser.name }} Tasks</h2>
     <menu>
       <button (click)="openForm()">New Task</button>
     </menu>
