integrating the landing page with the database saving the application

--- a/landingPage/src/app/app.component.html
+++ b/landingPage/src/app/app.component.html
@@ -5,3 +5,12 @@
 <app-faqs></app-faqs>
 <app-contact></app-contact>
 <app-footer></app-footer>
+
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="timer"
+  [fullScreen]="true"
+  ><p style="color: white">Loading...</p></ngx-spinner
+>
