--- a/landingPage/src/app/contact/contact.component.html
+++ b/landingPage/src/app/contact/contact.component.html
@@ -1,77 +1,107 @@
 <section id="contact" class="contact section">
-    <div class="container section-title" data-aos="fade-up">
-        <h2 class="contact-title">Contact Us</h2>
-        <p class="contact-paragraph">For any inquiries or to schedule a consultation, please reach out to us.</p>
-    </div>
+  <div class="container section-title" data-aos="fade-up">
+    <h2 class="contact-title">Contact Us</h2>
+    <p class="contact-paragraph">
+      For any inquiries or to schedule a consultation, please reach out to us.
+    </p>
+  </div>
 
-    <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="row gy-4">
+      <div class="col-lg-6">
         <div class="row gy-4">
-            <div class="col-lg-6">
-                <div class="row gy-4">
-                    <div class="col-md-6">
-                        <div class="info-item" data-aos="fade" data-aos-delay="200">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <h3>Address</h3>
-                            <p>33 Abo Bakr El Sedeek</p>
-                            <p>Heliopolis, Cairo</p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="info-item" data-aos="fade" data-aos-delay="300">
-                            <i class="fas fa-phone"></i>
-                            <h3>Call Us</h3>
-                            <p class="phoneNumber"><a href="tel:+201097597536">+20 109 759 7536</a></p>
-                            <p class="phoneNumber"><a href="tel:+201203554163">+20 120 355 4163</a></p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="info-item" data-aos="fade" data-aos-delay="400">
-                            <i class="fas fa-envelope"></i>
-                            <h3>Email Us</h3>
-                            <p>contact&#64;shadyragaay.com</p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="info-item" data-aos="fade" data-aos-delay="500">
-                            <i class="fas fa-clock"></i>
-                            <h3>Open Hours</h3>
-                            <p>Monday - Friday</p>
-                            <p>9:00 AM - 5:00 PM</p>
-                        </div>
-                    </div>
-                </div>
+          <div class="col-md-6">
+            <div class="info-item" data-aos="fade" data-aos-delay="200">
+              <i class="fas fa-map-marker-alt"></i>
+              <h3>Address</h3>
+              <p>33 Abo Bakr El Sedeek</p>
+              <p>Heliopolis, Cairo</p>
             </div>
+          </div>
 
-            <div class="col-lg-6">
-                <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
-                    data-aos-delay="200">
-                    <div class="row gy-4">
-                        <div class="col-md-6">
-                            <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                        </div>
-                        <div class="col-md-6 ">
-                            <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                        </div>
-                        <div class="col-12">
-                            <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                        </div>
-                        <div class="col-12">
-                            <textarea class="form-control" name="message" rows="6" placeholder="Message"
-                                required=""></textarea>
-                        </div>
-                        <div class="col-12 text-center">
-                            <div *ngIf="isLoading" class="loading">Loading...</div>
-                            <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
-                            <div *ngIf="successMessage" class="sent-message">{{ successMessage }}</div>
-
-                            <button type="submit" [disabled]="isLoading">Send Message</button>
-                        </div>
-                    </div>
-                </form>
+          <div class="col-md-6">
+            <div class="info-item" data-aos="fade" data-aos-delay="300">
+              <i class="fas fa-phone"></i>
+              <h3>Call Us</h3>
+              <p class="phoneNumber">
+                <a href="tel:+201097597536">+20 109 759 7536</a>
+              </p>
+              <p class="phoneNumber">
+                <a href="tel:+201203554163">+20 120 355 4163</a>
+              </p>
             </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="info-item" data-aos="fade" data-aos-delay="400">
+              <i class="fas fa-envelope"></i>
+              <h3>Email Us</h3>
+              <p>contact&#64;shadyragaay.com</p>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="info-item" data-aos="fade" data-aos-delay="500">
+              <i class="fas fa-clock"></i>
+              <h3>Open Hours</h3>
+              <p>Monday - Friday</p>
+              <p>9:00 AM - 5:00 PM</p>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="col-lg-6">
+        <form method="dialog" class="php-email-form" name="contact">
+          <div class="row gy-4">
+            <div class="col-md-6">
+              <input
+                type="text"
+                [(ngModel)]="enteredName"
+                class="form-control"
+                placeholder="Your Name"
+                name="Your Name"
+                required=""
+              />
+            </div>
+            <div class="col-md-6">
+              <input
+                type="email"
+                class="form-control"
+                [(ngModel)]="enteredEmail"
+                placeholder="Your Email"
+                name="Your Email"
+                required=""
+              />
+            </div>
+            <div class="col-12">
+              <input
+                type="text"
+                class="form-control"
+                [(ngModel)]="enteredSubject"
+                placeholder="Subject"
+                name="Subject"
+                required=""
+              />
+            </div>
+            <div class="col-12">
+              <textarea
+                class="form-control"
+                [(ngModel)]="enteredMessage"
+                rows="6"
+                placeholder="Message"
+                name="Message"
+                required=""
+              ></textarea>
+            </div>
+            <div class="col-12 text-center">
+              <button type="submit" (click)="submitHandler($event)">
+                Send Message
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </section>
