--- a/frontend/src/app/components/inbox/inbox.component.html
+++ b/frontend/src/app/components/inbox/inbox.component.html
@@ -1,7 +1,7 @@
 <div class="mailbox-container">
   <h1>Mailbox</h1>
   <div *ngFor="let mail of mails" class="mail-item">
-    <div class="d-flex flex-column">
+    <div class="mail-body d-flex flex-column">
       <h3>{{ mail.subject }}</h3>
       <p>
         <strong>From:</strong> {{ mail.name }} (<a
@@ -10,7 +10,23 @@
         >)
       </p>
       <p>{{ mail.message }}</p>
+      <button class="delete-btn" (click)="deleteMail(mail.id)">
+        <i class="fa-solid fa-trash"></i>
+      </button>
     </div>
-    <button class="send-btn" (click)="toggleResponseForm()">Respond</button>
+    <div class="response">
+      <h4 for="response">Enter a Message</h4>
+      <textarea
+        type="text"
+        id="response"
+        [(ngModel)]="enteredResponce[+mail.id]"
+      ></textarea>
+      <button
+        class="send-btn"
+        (click)="respondToMessage(mail.email, enteredResponce[+mail.id])"
+      >
+        > Respond
+      </button>
+    </div>
   </div>
 </div>
